ajeita input boxes

--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
 <body>
   <h1>CRUD - Let's Code</h1>
   <form>
-    <p class="textInput">Nome</p>
     <div class="inputContainer">
-      <input type="text" id="name" placeholder="Digite seu nome">
+      <label for="inputBox" class="textLabel">Nome</label>
+      <input type="text" id="inputBox" placeholder="Digite seu nome">
+      <label for="inputBox" class="textLabel">Nome</label>
+      <input type="text" id="inputBox" placeholder="Digite seu nome">
+      <label for="inputBox" class="textLabel">Nome</label>
+      <input type="text" id="inputBox" placeholder="Digite seu nome">
+      <label for="inputBox" class="textLabel">Nome</label>
+      <input type="text" id="inputBox" placeholder="Digite seu nome">
     </div>
   </form>
 </body>
