Estiliza (bb match) e imprime lista
Estilização completa da página inicial e com a funcionalidade
de imprimir uma lista básica na própria página com as informações
do form.

--- a/index.html
+++ b/index.html
@@ -1,30 +1,78 @@
 <!DOCTYPE html>
 <link rel="stylesheet" href="/styles.css" />
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CRUD Lets-code</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CRUD Lets-code</title>
-</head>
+  <body>
+    <h1>BB Match</h1>
+    <h2>Crie sua conta</h2>
+    <form id="form">
+      <div class="inputContainer">
+        <label for="inputBox" class="textLabel">Nome</label>
+        <input
+          name="name"
+          type="text"
+          id="nameInput"
+          class="inputBox"
+          placeholder="Digite seu nome"
+        />
+        <label for="inputBox" class="textLabel">Idade</label>
+        <input
+          name="age"
+          type="number"
+          id="ageInput"
+          class="inputBox"
+          placeholder="Digite sua idade"
+        />
+        <label for="selectBox" class="textLabel">Profissão</label>
+        <select id="jobInput" name="job" class="selectBox">
+          <option value="Analista de TI">Analista de TI</option>
+          <option value="Bancário">Bancário</option>
+          <option value="Engenheiro">Engenheiro</option>
+          <option value="Professor">Professor</option>
+          <option value="Motorista">Motorista</option>
+        </select>
+        <fieldset class="fieldset">
+          <legend class="textLabel">Termos e Condições</legend>
+          <div>
+            <input type="checkbox" id="conditionsInput" name="conditions" />
+            <label for="conditions" class="textLabel conditionsLabel">
+              Aceita os termos e condições?
+            </label>
+          </div>
+        </fieldset>
+        <fieldset class="fieldset">
+          <legend class="textLabel">Tipo de coordenação motora</legend>
 
-<body>
-  <h1>CRUD - Let's Code</h1>
-  <form>
-    <div class="inputContainer">
-      <label for="inputBox" class="textLabel">Nome</label>
-      <input type="text" id="inputBox" placeholder="Digite seu nome">
-      <label for="inputBox" class="textLabel">Nome</label>
-      <input type="text" id="inputBox" placeholder="Digite seu nome">
-      <label for="inputBox" class="textLabel">Nome</label>
-      <input type="text" id="inputBox" placeholder="Digite seu nome">
-      <label for="inputBox" class="textLabel">Nome</label>
-      <input type="text" id="inputBox" placeholder="Digite seu nome">
-    </div>
-  </form>
-</body>
+          <div>
+            <input type="radio" id="destroInput" name="coordMotora" checked />
+            <label class="textLabel conditionsLabel" for="destro">Destro</label>
+          </div>
 
-<script>index.js</script>
+          <div>
+            <input type="radio" id="canhotoInput" name="coordMotora" />
+            <label class="textLabel conditionsLabel" for="canhoto">
+              Canhoto
+            </label>
+          </div>
 
+          <div>
+            <input type="radio" id="ambidestroInput" name="coordMotora" />
+            <label class="textLabel conditionsLabel" for="ambidestro">
+              Ambidestro
+            </label>
+          </div>
+        </fieldset>
+        <button id="buttonSubmit" class="buttonSubmit">Criar conta</button>
+      </div>
+    </form>
+    <ul id="list"></ul>
+  </body>
+
+  <script src="index.js"></script>
 </html>
