--- a/list.html
+++ b/list.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="styles.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lista de Contas</title>
   </head>
   <body>
+    <button class="buttonSubmit" id="voltar">Voltar</button>
     <h1>Lista de Contas</h1>
+
+    <div class="listaContas">
+      <ul id="list"></ul>
+      <script src="list.js"></script>
+    </div>
   </body>
 </html>
