--- a/list.html
+++ b/list.html
@@ -10,9 +10,10 @@
   <body>
     <button class="buttonSubmit" id="voltar">Voltar</button>
     <h1>Lista de Contas</h1>
-
     <div class="listaContas">
-      <ul id="list"></ul>
+      <ul id="list">
+        <p>Conta 1</p>
+      </ul>
       <script src="list.js"></script>
     </div>
   </body>
